--- a/package.json
+++ b/package.json
@@ -6,17 +6,69 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "clean": "rm -rf .next",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
+    "prettier:diff": "prettier --check --diff .",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "pre-commit": "next lint --fix && git add -A .",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:db:push": "prisma db push",
+    "prisma:migrate": "prisma migrate",
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/lab": "^5.0.0-alpha.121",
+    "@mui/material": "latest",
+    "@mui/x-data-grid": "^6.0.0",
+    "@mui/x-data-grid-generator": "^6.0.0",
+    "@prisma/client": "^4.11.0",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "exceljs": "^4.3.0",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "multiparty": "^4.2.3",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "node-xlsx": "^0.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-filepond": "^7.1.2",
+    "react-hook-form": "^7.43.3",
+    "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.3",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/multiparty": "^0.0.33",
+    "@types/uuid": "^9.0.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "pg": "^8.9.0",
+    "prettier": "^2.8.4",
+    "prisma": "^4.11.0",
+    "ts-node": "10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
