--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "base64-stream": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
@@ -43,22 +44,29 @@
     "exceljs": "^4.3.0",
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
+    "fs": "^0.0.1-security",
     "multiparty": "^4.2.3",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "node-xlsx": "^0.21.0",
+    "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.43.3",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
+    "react-swipeable-views": "^0.14.0",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/base64-stream": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/multiparty": "^0.0.33",
+    "@types/pdfkit": "^0.12.8",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/uuid": "^9.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
