--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.3.4",
     "base64-stream": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
